Spell check, TODO's removed.

--- a/2017/0915 ISMD/proceedings/jan_kaspar_ismd2017_proceedings.tex
+++ b/2017/0915 ISMD/proceedings/jan_kaspar_ismd2017_proceedings.tex
@@ -33,7 +33,7 @@ This contribution reviews and compares various LHC results on soft diffraction, 
 \section{Introduction}
 \label{s:intro}
 
-The aim of this contribution is to compare soft-diffraction results across the LHC experiments, to identify and understand differences and trends that occur in the data. There are measurements from ALICE \cite{alice}, ATLAS \cite{atlas}, ATLAS-ALFA \cite{alfa-si-el-7tev}, CMS \cite{cms}, LHCb \cite{lhcb} and TOTEM \cite{totem}. The focus is put on elastic scattering, total, inelastic and elastic cross-section, single and double diffraction. Other interesting topics, e.g.~central diffraction, are not covered due to size limits to this contribution.
+The aim of this contribution is to compare soft-diffraction results across the LHC experiments, to identify and understand differences and trends that occur in the data. There are measurements from ALICE \cite{alice}, ATLAS \cite{atlas}, ATLAS-ALFA \cite{alfa-si-el-7tev}, CMS \cite{cms}, LHCb \cite{lhcb} and TOTEM \cite{totem}. The focus is put on elastic scattering, total, inelastic and elastic cross-section, single and double diffraction. Other interesting topics, e.g.~central diffraction, are not covered only due to length restrictions to this contribution.
 
 
 %----------------------------------------------------------------------------------------------------
@@ -133,7 +133,7 @@ ALICE has published \cite{alice-inel-sd-dd} a single-diffraction measurement bas
 
 CMS has published \cite{cms-diff-7tev} a measurement based on counting events with rapidity gaps on one side of the detector. Also in this analysis the forward protons were not identified. The cross-section was presented as a function of $\xi$, the fractional momentum loss: showing a gentle decrease of the cross-section with $\xi$, where none of the considered Monte-Carlo generators was able describe all the features in detail.
 
-TOTEM has preliminary results \cite{totem-sd-7tev-prelim} from an analysis at $\sqrt s = 7\un{TeV}$ where the surviving protons are tagged. As illustrated in Figure~\ref{f:sd TOTEM}, the analysis is performed in 3 diffractive-mass (or $\xi$) bins. They are defined by the acceptance of TOTEM subdetectors and the relation between the rapidity gap, $\Delta y$, and $\xi$: $\Delta y \approx -\log\xi$. For each $\xi$ bin, the results are presented as a function of the proton four-momentum transfer squared, $t$. The distributions are compatible with exponentials where the slope, $B$, decreases with increasing $\xi$. Summing the preliminary per-bin cross-sections yields $(6.5\pm 1.3)\un{mb}$. This can be complemented with a cross-section of $(2.6\pm 2.2)\un{mb}$ which corresponds to events with all particles more forward than the T2 acceptance \cite{totem-si-inel-7tev}. As this cross-section is expected to be dominated by single diffraction, one can estimate $\sigma_{\rm SD} = (9.1 \pm 2.9)\un{mb}$. This value corresponds to cutoff $\xi \lesssim 0.022$ and is represented by the green point in Figure~\ref{f:sd cs summary}.
+TOTEM has preliminary results \cite{totem-sd-7tev-prelim} from an analysis at $\sqrt s = 7\un{TeV}$ where the surviving protons are tagged. As illustrated in Figure~\ref{f:sd TOTEM}, the analysis is performed in 3 diffractive-mass (or $\xi$) bins. They are defined by the acceptance of TOTEM subdetectors and the relation between the rapidity gap, $\Delta y$, and $\xi$: $\Delta y \approx -\log\xi$. For each $\xi$ bin, the results are presented as a function of the proton four-momentum transfer squared, $t$. The distributions are compatible with exponentials where the slope, $B$, decreases with increasing $\xi$. Summing the preliminary per-bin cross-sections yields $(6.5\pm 1.3)\un{mb}$. This can be complemented with a cross-section of $(2.6\pm 2.2)\un{mb}$ which corresponds to events with all particles more forward than the T2 acceptance \cite{totem-si-inel-7tev}. As this cross-section is expected to be dominated by single diffraction, one can estimate $\sigma_{\rm SD} = (9.1 \pm 2.9)\un{mb}$. This value corresponds to cut-off $\xi \lesssim 0.022$ and is represented by the green point in Figure~\ref{f:sd cs summary}.
 
 There is also an ongoing combined CMS+TOTEM analysis at $\sqrt s = 8\un{TeV}$ which combines the benefits of a central detector and forward-proton taggers. This analysis aims at event classification as non-diffractive, single-diffractive and double-diffractive.
 
@@ -170,8 +170,6 @@ As mentioned in Section~\ref{s:sd}, the combined CMS + TOTEM analysis is expecte
 \end{figure}
 
 %----------------------------------------------------------------------------------------------------
-
-% TODO: order
 
 \begin{thebibliography}{99}
 
